fix: add more spacing to top and bottom of collaborators block

--- a/blocks/collaborators/collaborators.css
+++ b/blocks/collaborators/collaborators.css
@@ -7,7 +7,8 @@
 
 .cmp-collaborators__inner-wrap {
   grid-column: 2 / -2;
-  padding-top: 4rem;
+  padding-top: 5.25rem;
+  padding-bottom: 5.25rem;
 }
 
 .cmp-collaborator {
